added crust and price, updated all files to reflect crust addition

--- a/src/main/webapp/orderPizza.html
+++ b/src/main/webapp/orderPizza.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>John's Online Pizza Store</title>
+        <title>Matthew's Online Pizza Store</title>
         <link rel="stylesheet" href="mystyle.css">
     </head>
     <body>
-        <h1><a href="home.html">John's Online Pizza Store</a></h1>
+        <h1><a href="home.html">Matthew's Online Pizza Store</a></h1>
         <h2>Web Order Form</h2>
         <form name='pizzaform' method='get' action='orderpizza'>
             <p>Customer Email: <input type='text' name='email' size='40' 
@@ -14,10 +14,16 @@
             <input type='radio' name='size' value='large' checked required>Large
             <input type='radio' name='size' value='medium'>Medium
             <input type='radio' name='size' value='small'>Small
-            <br>
+            <br/>
+            <input type='radio' name='crust' value='pan' checked required>Pan
+            <input type='radio' name='crust' value='hand-tossed'>Hand-Tossed
+            <input type='radio' name='crust' value='thin'>Thin
+            <br/>
             <input type="checkbox" name="toppings" value="pepperoni">Pepperoni
             <input type="checkbox" name="toppings" value="mushroom">Mushroom
             <input type="checkbox" name="toppings" value="pineapple">Pineapple
+            <input type="checkbox" name="toppings" value="chicken">Chicken
+            <input type="checkbox" name="toppings" value="extracheese">Extra Cheese
             <br>
             <input type='hidden' name='userAction' value='order'>
             <input type="submit" name="order" value="Place Order">
